--- a/readme
+++ b/readme
@@ -1,1 +1,2 @@
-Test
+# KartenApp
+Eine Android-KartenApp die den eigenen Standort anzeigt und die Möglichkeit bietet Routen aufzunehmen oder später wieder anzuzeigen
